--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-router": "^4.3.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
